--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -9,6 +9,7 @@
       display: flex
       align-items: center
       justify-content: space-between
+      margin: 0
       padding: 0
       list-style: none
     &__item
