create: articles section and style

--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -24,3 +24,15 @@ img
   &__arrow
     width: 20px
     height: 20px
+.numbers
+  font-style: normal
+  font-weight: normal
+  font-size: 12px
+  line-height: 15px
+  color: $numbers-color
+.date
+  font-style: normal
+  font-weight: normal
+  font-size: 12px
+  line-height: 15px
+  color: $numbers-color
