--- a/sass/style.sass
+++ b/sass/style.sass
@@ -4,5 +4,6 @@
 @import 'settings'
 @import 'sections/header'
 @import 'sections/main-info'
+@import 'sections/articles'
 @import 'media/media-1200'
 @import 'media/media-992'
