--- a/css/style.css
+++ b/css/style.css
@@ -409,6 +409,22 @@ img {
   height: 20px;
 }
 
+.numbers {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #939699;
+}
+
+.date {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #939699;
+}
+
 .header {
   background-color: #262D33;
   padding: 15px 0;
@@ -682,6 +698,526 @@ img {
 
 .main-info__tab-text_uppercase {
   text-transform: uppercase;
+}
+
+.articles {
+  padding-top: 155px;
+  padding-bottom: 60px;
+}
+
+.articles-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 170px);
+  grid-row-gap: 30px;
+  grid-column-gap: 30px;
+  margin-top: 30px;
+}
+
+.articles__card {
+  background-color: #FFFFFF;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.articles__card_dreamwork {
+  grid-column: 1/3;
+  grid-row: 1/3;
+  background: url(../img/articles/dreamwork-img.png);
+  background-repeat: no-repeat;
+  background-position: right 16px;
+  background-color: #FFFFFF;
+}
+
+.articles__card_web-design {
+  position: relative;
+  grid-column: 3/4;
+  grid-row: 1/3;
+  background: url(../img/articles/web-design-bg.jpg);
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  z-index: 1;
+}
+
+.articles__card_web-design::after {
+  position: absolute;
+  content: '';
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35));
+  z-index: -1;
+}
+
+.articles__card_tools {
+  grid-column: 1/2;
+  grid-row: 3/5;
+}
+
+.articles__card_referens {
+  grid-column: 2/3;
+  grid-row: 3/4;
+}
+
+.articles__card_customers {
+  grid-column: 3/4;
+  grid-row: 3/4;
+}
+
+.articles__card_work {
+  grid-column: 2/3;
+  grid-row: 4/5;
+}
+
+.articles__card_free {
+  grid-column: 3/4;
+  grid-row: 4/5;
+}
+
+.articles__card_download {
+  grid-column: 4/5;
+  grid-row: 1/2;
+}
+
+.articles__card_tags {
+  grid-column: 4/5;
+  grid-row: 2/4;
+}
+
+.articles__card_social {
+  grid-column: 4/5;
+  grid-row: 4/5;
+}
+
+.dreamwork {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  padding: 35px 0 13px 35px;
+}
+
+.dreamwork__text {
+  max-width: 238px;
+}
+
+.dreamwork__text::after {
+  position: absolute;
+  left: 0;
+  content: '';
+  width: 555px;
+  height: 1px;
+  background-color: #D9DADB;
+}
+
+.dreamwork__subtitle {
+  font-family: 'Lato-Black', sans-serif;
+  font-style: normal;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: 0.5px;
+  color: #6E99AE;
+  text-transform: uppercase;
+}
+
+.dreamwork__title {
+  margin-top: 20px;
+  font-family: 'Roboto Slab', serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 25px;
+  line-height: 30px;
+  color: #262D33;
+}
+
+.dreamwork__description {
+  margin-top: 0;
+  margin-bottom: 49px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.dreamwork__link {
+  margin-top: 15px;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.dreamwork__avatar {
+  margin-right: 10px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.dreamwork__username {
+  margin-right: 5px;
+  font-family: 'Lato-Black', sans-serif;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #262D33;
+}
+
+.dreamwork__comment {
+  margin-right: 15px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #4B5157;
+}
+
+.dreamwork__comment-numbers {
+  max-width: 30px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
+.dreamwork__icon {
+  margin-right: 5px;
+  width: 15px;
+  height: 15px;
+}
+
+.web-design {
+  padding: 0 25px 25px 25px;
+}
+
+.web-design__text {
+  margin-top: 160px;
+}
+
+.web-design__subtitle {
+  font-family: 'Lato-Black', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  text-transform: uppercase;
+  letter-spacing: 0.5px;
+  color: #E7D9FF;
+}
+
+.web-design__title {
+  margin-top: 23px;
+  margin-bottom: 27px;
+  font-family: 'Roboto Slab', serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+}
+
+.web-design__link {
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+}
+
+.web-design__avatar {
+  margin-right: 10px;
+  width: 45px;
+  height: 45px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.web-design__username {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #FFFFFF;
+  opacity: 0.85;
+}
+
+.web-design__comment {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 157px;
+}
+
+.web-design__numbers {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 30px;
+}
+
+.web-design__numbers:last-child {
+  margin-right: 0;
+}
+
+.web-design__icon {
+  width: 15px;
+  height: 15px;
+}
+
+.web-design__label {
+  position: absolute;
+  top: 19px;
+  left: 25px;
+  max-width: 100px;
+  padding: 5px 12px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  color: #FFFFFF;
+  background-color: #3DC47E;
+  border-radius: 3px;
+}
+
+.tools__image {
+  width: 100%;
+  height: 275px;
+  object-fit: cover;
+}
+
+.tools__title {
+  padding: 0 25px 30px 25px;
+  margin: 0;
+  margin-top: 15px;
+  max-width: 237px;
+  font-family: 'Roboto Slab', serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+.other-article {
+  padding: 25px 25px 30px 25px;
+}
+
+.other-article__title {
+  margin: 0;
+  margin-bottom: 5px;
+  font-family: 'Roboto Slab', serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
+}
+
+.other-article__description {
+  margin: 0;
+  margin-bottom: 10px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #4B5157;
+}
+
+.other-article__description_customers {
+  margin-bottom: 30px;
+}
+
+.download {
+  position: relative;
+  padding: 25px 25px 13px 25px;
+  background-color: #3BBDC4;
+}
+
+.download::after {
+  position: absolute;
+  bottom: 45px;
+  left: 0;
+  content: '';
+  width: 263px;
+  height: 1px;
+  background-color: #96E2E3;
+}
+
+.download__text {
+  margin-bottom: 19px;
+}
+
+.download__title {
+  margin: 0;
+  margin-bottom: 10px;
+  font-family: 'Roboto Slab', serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 25px;
+  color: #FFFFFF;
+}
+
+.download__subtitle {
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #C1F4F5;
+}
+
+.download__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding-top: 12px;
+}
+
+.download__icon {
+  width: 20px;
+  height: 20px;
+  margin-right: 10px;
+}
+
+.download__link {
+  font-family: 'Lato-Black', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+
+.tags {
+  position: relative;
+  padding: 20px 0 30px 25px;
+}
+
+.tags::after {
+  position: absolute;
+  top: 59px;
+  left: 0;
+  content: '';
+  width: 263px;
+  height: 1px;
+  background-color: #D9DADB;
+}
+
+.tags__title {
+  margin: 0;
+  margin-bottom: 45px;
+  font-family: 'Lato-Black', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+  text-transform: uppercase;
+}
+
+.tags__group {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.tags__button {
+  padding: 5px 15px 5px 14px;
+  margin-right: 10px;
+  margin-bottom: 13px;
+  background-color: transparent;
+  border: 1px solid #D9DADB;
+  border-radius: 5px;
+  cursor: pointer;
+  outline: none;
+}
+
+.tags__button:last-child {
+  margin-right: 0;
+}
+
+.tags__button-text {
+  font-family: 'Lato-Black', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.social {
+  padding: 30px 25px 40px 25px;
+}
+
+.social-wrapper {
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  width: 190px;
+}
+
+.social__title {
+  text-align: center;
+  margin: 0;
+  margin-bottom: 25px;
+  font-family: 'Roboto Slab', serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 25px;
+}
+
+.social__icon {
+  width: 50px;
+  height: 50px;
+}
+
+.features {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25px 25px 30px 25px;
+  background-color: #262D33;
+  border-radius: 10px;
+}
+
+.features__wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 260px;
+}
+
+.features__wrapper:last-child {
+  width: 235px;
+}
+
+.features__wrapper:last-child::after {
+  display: none;
+}
+
+.features__wrapper::after {
+  content: '';
+  width: 1px;
+  height: 75px;
+  margin-left: 25px;
+  background-color: #4B5157;
+}
+
+.features__wrapper::after:nth-child(2) {
+  margin-right: 0;
+}
+
+.features__title {
+  margin-right: 15px;
+  font-family: 'Lato-Black', sans-serif;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 20px;
+  color: #FFFFFF;
+}
+
+.features__title_slider {
+  max-width: 151px;
+}
+
+.features__img {
+  width: 65px;
+  height: 65px;
 }
 
 @media (max-width: 1200px) {
