--- a/css/style.css
+++ b/css/style.css
@@ -390,7 +390,8 @@ img {
 .button {
   display: flex;
   align-items: center;
-  max-width: 154px;
+  justify-content: center;
+  min-width: 154px;
   padding: 10px 20px;
   border-radius: 20px;
   background-color: #4592FF;
@@ -1218,6 +1219,53 @@ img {
 .features__img {
   width: 65px;
   height: 65px;
+}
+
+.promo {
+  position: relative;
+  padding-top: 50px;
+  padding-bottom: 55px;
+  background: url(../img/promo/promo-bg.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  z-index: 1;
+}
+
+.promo::before {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  content: '';
+  background: linear-gradient(0deg, rgba(64, 48, 61, 0.35), rgba(64, 48, 61, 0.35));
+  z-index: -1;
+}
+
+.promo-wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 946px;
+  margin: auto;
+}
+
+.promo__title {
+  margin: 0;
+  margin-bottom: 25px;
+  text-align: center;
+  font-family: 'Roboto Slab', serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 40px;
+  line-height: 50px;
+  color: #FFFFFF;
+}
+
+.promo__button {
+  max-width: 200px;
+  margin: auto;
+  text-decoration: none;
 }
 
 @media (max-width: 1200px) {
