--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -11,7 +11,8 @@ img
 .button
   display: flex
   align-items: center
-  max-width: 154px
+  justify-content: center
+  min-width: 154px
   padding: 10px 20px
   border-radius: 20px
   background-color: $primary
