--- a/sass/style.sass
+++ b/sass/style.sass
@@ -5,5 +5,6 @@
 @import 'sections/header'
 @import 'sections/main-info'
 @import 'sections/articles'
+@import 'sections/promo'
 @import 'media/media-1200'
 @import 'media/media-992'
