--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -56,3 +56,8 @@
       border-radius: 10px
       background-color: #656B70
       outline: none
+    &__benu
+      &-button
+        display: none
+.menu-button
+  display: none
