--- a/sass/sections/_main-info.sass
+++ b/sass/sections/_main-info.sass
@@ -67,6 +67,10 @@
     &-block
       margin-top: 145px
       margin-bottom: 48px
+    &-wrapper
+      display: flex
+      flex-direction: column
+      align-items: start
   &__subtitle
     font-weight: 900
     font-size: 12px
@@ -85,6 +89,7 @@
     line-height: 50px
     color: $text-color-light
   &__button
+    max-width: 200px
     text-decoration: none
   &__right
     display: flex
@@ -106,9 +111,9 @@
     padding: 17px 25px 19px 25px
     border-top: 1px solid #D9DADB
     cursor: pointer
-    &:nth-child(5)
+    &:nth-child(4)
       padding-bottom: 39px
-    &:nth-child(6)
+    &:nth-child(5)
       padding-bottom: 28px
     &:hover
       background-color: #F5F5F5
