create: responsive for 767px

--- a/sass/media/_media-1200.sass
+++ b/sass/media/_media-1200.sass
@@ -8,4 +8,45 @@
   .main-info
     &__wrapper
       max-width: 960px
-  
+  .articles
+    &-grid
+      grid-column-gap: 15px
+      grid-row-gap: 15px
+    &__card
+      &_dreamwork
+        background-size: 252px 259px
+  .dreamwork
+    padding: 15px 0 13px 15px
+    &__avatar
+      margin-right: 5px
+    &__username
+      font-size: 12px
+      margin-right: 5
+    &__comment
+      margin-right: 10px
+      font-size: 12px
+  .web-design
+    padding: 0 10px 15px 10px
+    &__text
+      margin-top: 155px
+  .other-article
+    padding: 10px 15px 10px 15px
+    &__title
+      font-size: 14px
+    &__description
+      &_referens
+        margin-bottom: 29px
+      &_free
+        margin-bottom: 29px
+  .download
+    padding: 10px 15px 10px 15px
+    &__wrapper
+      padding-top: 5px
+  .tags
+    padding: 10px 0 10px 10px
+    &__title
+      margin-left: 10px
+      margin-bottom: 35px
+      margin-top: 10px
+  .social
+    padding: 30px 15px 30px 15px
