--- a/css/style.css
+++ b/css/style.css
@@ -1293,6 +1293,62 @@ img {
   .main-info__wrapper {
     max-width: 960px;
   }
+  .articles-grid {
+    grid-column-gap: 15px;
+    grid-row-gap: 15px;
+  }
+  .articles__card_dreamwork {
+    background-size: 252px 259px;
+  }
+  .dreamwork {
+    padding: 15px 0 13px 15px;
+  }
+  .dreamwork__avatar {
+    margin-right: 5px;
+  }
+  .dreamwork__username {
+    font-size: 12px;
+    margin-right: 5;
+  }
+  .dreamwork__comment {
+    margin-right: 10px;
+    font-size: 12px;
+  }
+  .web-design {
+    padding: 0 10px 15px 10px;
+  }
+  .web-design__text {
+    margin-top: 155px;
+  }
+  .other-article {
+    padding: 10px 15px 10px 15px;
+  }
+  .other-article__title {
+    font-size: 14px;
+  }
+  .other-article__description_referens {
+    margin-bottom: 29px;
+  }
+  .other-article__description_free {
+    margin-bottom: 29px;
+  }
+  .download {
+    padding: 10px 15px 10px 15px;
+  }
+  .download__wrapper {
+    padding-top: 5px;
+  }
+  .tags {
+    padding: 10px 0 10px 10px;
+  }
+  .tags__title {
+    margin-left: 10px;
+    margin-bottom: 35px;
+    margin-top: 10px;
+  }
+  .social {
+    padding: 30px 15px 30px 15px;
+  }
 }
 
 @media (max-width: 992px) {
@@ -1339,6 +1395,84 @@ img {
   .main-info__tab:nth-child(6) {
     padding-bottom: 19px;
   }
+  .articles {
+    padding-top: 100px;
+    padding-bottom: 40px;
+  }
+  .articles-grid {
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(6, 180px);
+  }
+  .articles__card_dreamwork {
+    grid-column: 1/5;
+  }
+  .articles__card_web-design {
+    grid-column: 5/7;
+    grid-row: 1/3;
+  }
+  .articles__card_tools {
+    grid-column: 1/3;
+  }
+  .articles__card_referens {
+    grid-column: 3/5;
+  }
+  .articles__card_customers {
+    grid-column: 5/7;
+  }
+  .articles__card_work {
+    grid-column: 3/5;
+    grid-row: 4/5;
+  }
+  .articles__card_free {
+    grid-column: 5/7;
+  }
+  .articles__card_download {
+    grid-column: 1/3;
+    grid-row: 5/6;
+  }
+  .articles__card_tags {
+    grid-column: 3/7;
+    grid-row: 5/6;
+  }
+  .articles__card_social {
+    grid-row: 6/7;
+    grid-column: 1/7;
+  }
+  .dreamwork {
+    padding-top: 35px;
+  }
+  .web-design__text {
+    margin-top: 179px;
+  }
+  .web-design__avatar {
+    width: 30px;
+    height: 30px;
+  }
+  .other-article__description_free {
+    margin-bottom: 12px;
+  }
+  .download__wrapper {
+    padding-top: 15px;
+  }
+  .tags::after {
+    top: 39px;
+    width: 100%;
+  }
+  .tags__title {
+    text-align: center;
+    margin-left: 0;
+    margin-top: 0;
+    margin-bottom: 20px;
+  }
+  .features {
+    display: none;
+  }
+  .promo-wrapper {
+    max-width: 700px;
+  }
+  .promo__title {
+    font-size: 28px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1379,6 +1513,7 @@ img {
     top: 20px;
     flex-direction: column;
     max-width: 576px;
+    width: 92%;
   }
   .main-info__left {
     padding-top: 20px;
@@ -1400,21 +1535,102 @@ img {
     text-align: center;
   }
   .main-info__tabs {
-    width: 800px;
+    width: 1200px;
     display: flex;
   }
   .main-info__tabs-wrapper {
     overflow: scroll;
   }
+  .main-info__tabs-wrapper::-webkit-scrollbar {
+    display: none;
+  }
   .main-info__tab {
     display: flex;
     flex-wrap: wrap;
-    width: 160px;
+    width: 240px;
     padding: 17px 10px 19px 10px;
     border-right: 1px solid #D9DADB;
   }
-  .articles {
-    padding-top: 170px;
+  .articles-grid {
+    grid-template-columns: repeat(auto-fill, 100%);
+    grid-template-rows: repeat(9, 180px);
+    grid-row-gap: 30px;
+  }
+  .articles__card_dreamwork {
+    grid-column: 1/2;
+  }
+  .articles__card_web-design {
+    grid-column: 1/2;
+    grid-row: 3/5;
+  }
+  .articles__card_tools {
+    grid-column: 1/2;
+    grid-row: 5/7;
+  }
+  .articles__card_download {
+    grid-column: 1/2;
+    grid-row: 7/8;
+  }
+  .articles__card_tags {
+    grid-column: 1/2;
+    grid-row: 8/9;
+  }
+  .articles__card_social {
+    grid-column: 1/2;
+    grid-row: 9/10;
+  }
+  .dreamwork__text {
+    max-width: 340px;
+  }
+  .dreamwork__text::after {
+    width: 100%;
+  }
+  .dreamwork__description {
+    margin-bottom: 120px;
+  }
+  .web-design {
+    padding-left: 25px;
+    padding-bottom: 30px;
+  }
+  .web-design__text {
+    margin-top: 240px;
+  }
+  .tools {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: center;
+  }
+  .tools__image {
+    height: 300px;
+  }
+  .tools__title {
+    padding: 5px 20px 5px 20px;
+    margin: 0;
+    max-width: 400px;
+  }
+  .download {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  .download::after {
+    width: 100%;
+  }
+  .download__text {
+    max-width: 300px;
+  }
+  .tags__group {
+    overflow-y: auto;
+  }
+  .other-article {
+    display: none;
+  }
+  .promo-wrapper {
+    max-width: 568px;
+  }
+  .promo__title {
+    font-size: 22px;
   }
 }
 /*# sourceMappingURL=style.css.map */
