--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -34,4 +34,67 @@
         padding-bottom: 19px
       &:nth-child(6)
         padding-bottom: 19px
+  .articles
+    padding-top: 100px
+    padding-bottom: 40px
+    &-grid
+      grid-template-columns: repeat(6, 1fr)
+      grid-template-rows: repeat(6, 180px)
+    &__card
+      &_dreamwork
+        grid-column: 1/5
+      &_web-design
+        grid-column: 5/7
+        grid-row: 1/3
+      &_tools
+        grid-column: 1/3
+      &_referens
+        grid-column: 3/5
+      &_customers
+        grid-column: 5/7
+      &_work
+        grid-column: 3/5
+        grid-row: 4/5
+      &_free
+        grid-column: 5/7
+      &_download
+        grid-column: 1/3
+        grid-row: 5/6
+      &_tags
+        grid-column: 3/7
+        grid-row: 5/6
+      &_social
+        grid-row: 6/7
+        grid-column: 1/7
+  .dreamwork
+    padding-top: 35px
+  .web-design
+    &__text
+      margin-top: 179px
+    &__avatar
+      width: 30px
+      height: 30px
+  .other-article
+    &__description
+      &_free
+        margin-bottom: 12px
+  .download
+    &__wrapper
+      padding-top: 15px
+  .tags
+    &::after
+      top: 39px
+      width: 100%
+    &__title
+      text-align: center
+      margin-left: 0
+      margin-top: 0
+      margin-bottom: 20px
+  .features
+    display: none
+  .promo
+    &-wrapper
+      max-width: 700px
+    &__title
+      font-size: 28px
         
