--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -2,3 +2,53 @@
   .main-info
     &__wrapper
       width: 92%
+    &__text
+      &-block
+        margin-top: 100px
+    &__title
+      font-size: 24px
+      line-height: 30px
+  .articles
+    padding-top: 75px
+    &-grid
+      grid-template-rows: repeat(9, 230px)
+    &__card
+      &_dreamwork
+        background-size: 202px 209px
+        background-position: right 50px
+  .dreamwork
+    padding-top: 10px
+    padding-bottom: 10px
+    &__text
+    &__title
+      margin-top: 10px
+      margin-bottom: 130px
+      font-size: 18px
+      max-width: 200px
+    &__description
+      margin-bottom: 10px
+    &__link
+      margin-top: 43px
+      max-width: 300px
+      flex-wrap: wrap
+    &__comment
+      margin-right: 20px
+      margin-top: 5px
+      font-size: 13px
+      line-height: 15px
+      max-width: 200px
+  .web-design
+    &__text
+      margin-top: 310px
+  .tools
+    &__image
+      height: 383px
+      margin-top: -25px
+  .social
+    padding-top: 60px
+  .promo
+    &-wrapper
+      width: 92%
+    &__title
+      font-size: 20px
+      line-height: 30px
