--- a/sass/media/_media-992.sass
+++ b/sass/media/_media-992.sass
@@ -5,11 +5,11 @@
     &-nav
       max-width: 100%
       flex-wrap: wrap
-      &__ul
-        margin-top: 15px
-        justify-content: space-evenly
-        width: 100%
-        order: 1
+    &__wrapper
+      margin-top: 15px
+      justify-content: space-evenly
+      width: 100%
+      order: 1
       &__item
         margin-left: 0
   .main-info
