--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -20,6 +20,9 @@
       line-height: 20px
       &:first-child
         margin-left: 0
+      &_mobile
+        &_visible
+          display: none
     &__link
       color: $text-color-light
       text-decoration: none
