--- a/sass/media/_media-767.sass
+++ b/sass/media/_media-767.sass
@@ -3,13 +3,50 @@
     max-width: 576px
     width: 92%
   .header
+    position: fixed
+    top: 0
+    left: 0
+    right: 0
+    z-index: 99 
     &__logo
       width: 120px
+    &__wrapper
+      &_mobile
+        display: none
+        position: fixed
+        flex-direction: column
+        justify-content: start
+        top: 40px
+        left: 0
+        right: 0
+        bottom: -100px
+        background-color: $dark
+        overflow-y: scroll
+        z-index: 99
+        &_visible
+          display: flex
     &-nav
       &__ul
-        display: none
+        &_mobile
+          &_hidden
+            display: none
+          &_visible
+            display: flex
+            flex-direction: column
+      &__item
+        margin-bottom: 15px
+        &:last-child
+          margin-bottom: 120px
+        &_mobile
+          &_visible
+            margin-top: 20px
+            margin-bottom: 15px
+            display: flex
       &__search
-        display: none
+        &_mobile
+          &_hidden
+            display: none
+      
   .menu
     &-button
       display: flex
@@ -29,7 +66,7 @@
   .main-info
     margin-top: -1px
     &__wrapper
-      top: 20px
+      top: 70px
       flex-direction: column
       max-width: 576px
       width: 92%
@@ -103,6 +140,7 @@
     justify-content: center
     &__image
       height: 300px
+      margin-top: -20px
     &__title
       padding: 5px 20px 5px 20px
       margin: 0
