--- a/sass/sections/_header.sass
+++ b/sass/sections/_header.sass
@@ -1,6 +1,8 @@
 .header
   background-color: $dark
   padding: 15px 0
+  &__wrapper
+    margin-right: 30px
   &-nav
     display: flex
     align-items: center
