--- a/sass/media/_media-767.sass
+++ b/sass/media/_media-767.sass
@@ -34,6 +34,7 @@
             display: flex
             flex-direction: column
       &__item
+        margin-left: 0
         margin-bottom: 15px
         &:last-child
           margin-bottom: 120px
