--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -37,5 +37,15 @@ img
   font-size: 12px
   line-height: 15px
   color: $numbers-color
+.time
+  font-style: normal
+  font-weight: normal
+  font-size: 12px
+  line-height: 15px
+  color: $numbers-color
 .scroll-hidden
   overflow: hidden
+.flag
+  color: #BCBFC2
+  &_active
+    color: red
