--- a/sass/media/_media-767.sass
+++ b/sass/media/_media-767.sass
@@ -164,3 +164,10 @@
       max-width: 568px
     &__title
       font-size: 22px
+  .news
+    &__card
+      flex-direction: column
+      &-image
+        width: 336px
+        height: 195px
+        margin-bottom: 15px
