--- a/sass/style.sass
+++ b/sass/style.sass
@@ -6,6 +6,7 @@
 @import 'sections/main-info'
 @import 'sections/articles'
 @import 'sections/promo'
+@import 'sections/news'
 @import 'media/media-1200'
 @import 'media/media-992'
 @import 'media/media-767'
