--- a/sass/media/_media-1200.sass
+++ b/sass/media/_media-1200.sass
@@ -50,3 +50,20 @@
       margin-top: 10px
   .social
     padding: 30px 15px 30px 15px
+  .news
+    &__wrapper
+      justify-content: space-between
+    &__left
+      margin-right: 0 
+    &__card
+      &::after
+        width: 598px
+      &-image
+        width: 250px
+        height: 150px
+        margin-right: 15px
+      &-text
+        width: 350px
+      &-description
+        min-width: 350px
+        max-width: 400px
