--- a/sass/media/_media-568.sass
+++ b/sass/media/_media-568.sass
@@ -52,3 +52,19 @@
     &__title
       font-size: 20px
       line-height: 30px
+  .news
+    &__card
+      &-image
+        width: 100%
+      &-text
+        width: 100%
+      &-title
+        width: 100%
+      &-description
+        width: 100%
+        min-width: 244px
+      &-flag
+        top: 234px
+        right: 30px
+    &__post
+      flex-basis: 100%
