--- a/sass/sections/_articles.sass
+++ b/sass/sections/_articles.sass
@@ -91,6 +91,8 @@
     font-size: 25px
     line-height: 30px
     color: $title-color-dark
+    &-link
+      text-decoration: none
   &__description
     margin-top: 0
     margin-bottom: 49px
@@ -155,6 +157,8 @@
     letter-spacing: 0.5px
     text-transform: uppercase
     color: $text-color-light
+    &-link
+      text-decoration: none
   &__link
     display: flex
     align-items: center
@@ -214,6 +218,9 @@
     font-weight: bold
     font-size: 16px
     line-height: 25px
+    color: $title-color-dark
+  &__link
+    text-decoration: none
 .other-article
   padding: 25px 25px 30px 25px
   &__title
@@ -224,6 +231,9 @@
     font-weight: bold
     font-size: 16px
     line-height: 25px
+    color: $title-color-dark
+  &__link
+    text-decoration: none
   &__description
     margin: 0
     margin-bottom: 10px
@@ -268,6 +278,7 @@
     align-items: center
     justify-content: center
     padding-top: 12px
+    cursor: pointer
   &__icon
     width: 20px
     height: 20px
