--- a/sass/sections/_news.sass
+++ b/sass/sections/_news.sass
@@ -45,6 +45,8 @@
         color: #FF4F52
       &_purple
         color: #AC8EE3
+    &-link
+      text-decoration: none
     &-title
       max-width: 437px
       margin-top: 15px
@@ -156,3 +158,5 @@
         width: 263px
         height: 1px
         background-color: #D9DADB
+      &:hover
+        color: $primary
