--- a/sass/sections/_news.sass
+++ b/sass/sections/_news.sass
@@ -7,14 +7,13 @@
   &__left
     display: flex
     flex-direction: column
-    margin-right: 29px
+    margin-right: 26px
     border-radius: 10px
     overflow: hidden
   &__card
     position: relative
     padding: 25px
     display: flex
-    align-items: center
     background-color: #ffffff
     &::after
       position: absolute
@@ -66,20 +65,27 @@
       line-height: 20px
       color: $text-color-dark
     &-bottom
+      margin-top: 19px
       display: flex
       align-items: center
+      &_contry
+        margin-top: 42px
     &-date
-      margin-right: 10px
+      margin-right: 12px
+      &_contry
+        margin-right: 8px
     &-icon
-      margin-right: 5px
+      margin-right: 7px
       width: 13px
       height: 13px
+      &_contry
+        margin-right: 0
     &-numbers
       margin-right: 10px
     &-flag
       position: absolute
       top: 25px
-      right: 25px
+      right: 27px
       cursor: pointer
   &__right
     padding: 20px 25px 0 25px
@@ -124,6 +130,7 @@
       width: 140px
     &-title
       margin: 0
+      margin-bottom: 4px
       max-width: 143px
       font-style: normal
       font-weight: normal
