--- a/sass/style.sass
+++ b/sass/style.sass
@@ -7,6 +7,7 @@
 @import 'sections/articles'
 @import 'sections/promo'
 @import 'sections/news'
+@import 'sections/other-articles'
 @import 'media/media-1200'
 @import 'media/media-992'
 @import 'media/media-767'
