--- a/sass/sections/_other-articles.sass
+++ b/sass/sections/_other-articles.sass
@@ -88,33 +88,15 @@
     &-icon
       width: 20px
       height: 20px
-.photo
-  position: relative
-  &__pagination
-    position: absolute
-    bottom: 47px !important
-    left: 224px !important
-    width: 108px !important
-    display: flex
-    justify-content: space-between
-    z-index: 100
-    cursor: pointer
-    outline: none
-  &__bullet
-    width: 8px
-    height: 8px
-    background-color: #FFFFFF
-    opacity: 0.4
-    border-radius: 50%
-    outline: none
-    &_active
-      opacity: 1
 .photo-slider
+  margin-left: 0
   position: relative
   max-width: 555px
   height: 570px
   border-radius: 10px
   overflow: hidden
+  &__block
+    position: relative
   &__image
     width: 100%
     height: 100%
@@ -214,3 +196,22 @@
     background-color: #3DC47E
     border-radius: 3px
     z-index: 99
+  &__pagination
+    position: absolute
+    bottom: 47px !important
+    left: 224px !important
+    width: 108px !important
+    display: flex
+    justify-content: space-between
+    z-index: 999
+    cursor: pointer
+    outline: none
+  &__bullet
+    width: 8px
+    height: 8px
+    background-color: #FFFFFF
+    opacity: 0.4
+    border-radius: 50%
+    outline: none
+    &_active
+      opacity: 1
