--- a/sass/style.sass
+++ b/sass/style.sass
@@ -8,6 +8,7 @@
 @import 'sections/promo'
 @import 'sections/news'
 @import 'sections/other-articles'
+@import 'sections/footer'
 @import 'media/media-1200'
 @import 'media/media-992'
 @import 'media/media-767'
